--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"main": "index.js",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"dev": "webpack"
+		"dev": "webpack-dev-server --hot"
 	},
 	"author": "kyle",
 	"license": "MIT",
@@ -21,6 +21,7 @@
 		"awesome-typescript-loader": "^5.2.1",
 		"webpack": "^4.43.0",
 		"webpack-cli": "^3.3.12",
+		"webpack-dev-server": "^3.11.0",
 		"wepack-cli": "0.0.1-security"
 	}
 }
