--- a/package.json
+++ b/package.json
@@ -12,9 +12,13 @@
 	"dependencies": {
 		"@types/react": "^16.9.43",
 		"@types/react-dom": "^16.9.8",
+		"@types/react-router": "^5.1.8",
+		"@types/react-router-dom": "^5.1.5",
 		"react": "^16.13.1",
 		"react-dom": "^16.13.1",
 		"react-hot-loader": "^4.12.21",
+		"react-router": "^5.2.0",
+		"react-router-dom": "^5.2.0",
 		"typescript": "^3.9.7"
 	},
 	"devDependencies": {
