--- a/package.json
+++ b/package.json
@@ -12,13 +12,18 @@
 	"dependencies": {
 		"@types/react": "^16.9.43",
 		"@types/react-dom": "^16.9.8",
+		"@types/react-redux": "^7.1.9",
 		"@types/react-router": "^5.1.8",
 		"@types/react-router-dom": "^5.1.5",
+		"immer": "^7.0.7",
 		"react": "^16.13.1",
 		"react-dom": "^16.13.1",
 		"react-hot-loader": "^4.12.21",
+		"react-redux": "^7.2.1",
 		"react-router": "^5.2.0",
 		"react-router-dom": "^5.2.0",
+		"redux": "^4.0.5",
+		"redux-devtools-extension": "^2.13.8",
 		"typescript": "^3.9.7"
 	},
 	"devDependencies": {
